--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "request": "2.65.x",
     "aws-sdk": "2.2.x",
     "diff2html": "1.1.x",
-    "pg": "4.4.x"
+    "pg": "4.4.x",
+    "cheerio": "0.19.x"
   },
   "engines": {
     "node": ">=0.8.0"
